syntax = "proto3";

package astria.protocol.auctioneer.v1;

import "astria/primitive/v1/types.proto";

message EnshrinedAuctioneerEntry {
  astria.primitive.v1.Address auctioneer_address = 1;
  astria.primitive.v1.Address staker_address = 2;
  astria.primitive.v1.Uint128 staked_amount = 3;
  string fee_asset = 4;
  string asset = 5;
}
